# Nexuslang

./: .coveragerc  .gitignore  01_basic_concepts  AUDIT.md  BRANDING_SWEEP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPILER_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DISTRIBUTION_SUMMARY.md  FEATURE_COMPLETENESS_AUDIT.md  FEATURE_SUPPORT_MATRIX.md  FIELD_TESTING_SUMMARY.md  GEMINI.md  GOVERNANCE.md  GUI_FEATURES_ROADMAP.md  GUI_QUICK_START.md  HIGH_PRIORITY_BRANDING_SUMMARY.md  LLVM_COMPILATION_SESSION3_SUMMARY.md  LLVM_COMPILATION_STATUS.md  LSP_QUICK_START.md  Makefile  NLPL.code-workspace  PERFORMANCE_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  RELEASE_NOTES_v1.1.md  SECURITY.md  TOOLING_GUIDE.md  TYPE_CHECKER_FIX.md  TYPE_SYSTEM_COMPLETION.md  VISUAL_GUIDE.md  VSCODE_EXTENSION_GUIDE.md  bench_o0  bench_o2  bench_o3  benchmark_fib.nlpl  benchmark_performance.py  (+22 more)
.emergent/: emergent.yml
.github/: pull_request_template.md
benchmarks/: README.md  bench_compiled.py  bench_fib_c_o0  bench_fib_c_o3  bench_fibonacci.c  bench_fibonacci.nxl  bench_fibonacci_c  bench_fibonacci_iter.c  bench_fibonacci_iter.py  bench_fibonacci_iter.rs  bench_matrix.c  bench_matrix.nxl  bench_matrix.py  bench_matrix.rs  bench_matrix_c_o0  bench_matrix_c_o3  bench_sieve.c  bench_sieve.nlpl  bench_sieve.py  bench_sieve.rs  bench_sieve_c_o0  bench_sieve_c_o2  bench_sieve_c_o3  bench_sieve_standalone.nlpl  bench_sieve_standalone.nxl  benchmark_ci.py  benchmark_compiled.py  benchmark_framework.py  benchmark_lsp_definition_lookup.py  benchmark_performance.py  benchmark_simple.py  fib_nlpl.callgrind  generate_dashboard.py  perf-baseline.json  perf-dashboard.html  performance_benchmark.nlpl  performance_benchmark.nxl  run_benchmarks.py  run_perf_baseline.py
dev_tools/: QUICKSTART.md  README.md  SUMMARY.md  VALIDATION_REPORT.md  benchmark_inline_asm.py  benchmark_interpreter.py  benchmark_lsp_cache.py  check_error_messages.py  debug_generic.py  debug_inheritance.py  debug_parser.py  debug_tools.py  demo_array_complete.py  demo_combined.py  demo_foreach_complete.py  explain_compilation.py  explain_error.py  fix_imports.py  fix_test_imports.py  generate_error_docs.py  import_checker.py  import_workaround.py  integration_tests.py  migrate_docs.py  migrate_tests.py  nlpl-analyze  nlpl-format  nlpl_bindgen.py  nlpl_build.py  nlpl_dev.py  nlpl_format.py  nlpl_lint.py  nlplc  nlplc_llvm.py  profile_compiler.py  profile_interpreter.py  profile_lsp.py  profile_parser.py  run_optimization_tests.sh  smoke_audio.py  (+29 more)
docs/: CROSS_PLATFORM_CLARIFICATION.md  CROSS_PLATFORM_GUIDE.md  CURRENT_STATUS_ANALYSIS.md  DEVELOPMENT_TOOLS_STATUS.md  ENUM_TYPES.md  FEATURE_COMPLETENESS_GAP_ANALYSIS.md  FEATURE_SUPPORT_MATRIX.md  FFI_QUICK_REFERENCE.md  FUNCTION_POINTERS.md  INTERPRETER_VS_COMPILER.md  LSP_QUICK_START.md  MULTI_LEVEL_QUICK_REFERENCE.md  NESTED_STRUCTS.md  NLPLLINT_README.md  NLPL_COMPETITIVE_ADVANTAGES.md  NLPL_DEVELOPMENT_ANALYSIS.md  NLPL_IDENTITY_CORRECTED.md  NLPL_PROGRESS_VISUAL_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION.md  PRODUCTION_GRADE_AUDIT.md  PRODUCTION_GRADE_COMPLETE.md  PROJECT_DEEP_DIVE_2026.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY_GUIDE.md  SESSION_SUMMARY_SWITCH_ENUM_FUNCPTR.md  STATUS.md  STDLIB_API_REFERENCE.md  SWITCH_STATEMENT.md  _ORGANIZATION_GUIDE.md  exception_handling_status.md
editors/: README.md
examples/: 01_basic_concepts.nlpl  02_object_oriented.nlpl  04_network_programming.nlpl  04_type_system_basics.nlpl  06_advanced_type_system.nlpl  06_functional_programming.nlpl  07_event_driven_programming.nlpl  08_advanced_type_features_index.nlpl  08_database_programming.nlpl  12_security_and_authentication.nlpl  12_type_aliases.nlpl  14_dependency_injection.nlpl  16_generic_types_comprehensive.nlpl  17_concurrent_programming.nlpl  17_lambda_and_higher_order_functions.nlpl  18_generic_classes_working.nlpl  19_functional_programming_patterns.nlpl  20_reactive_programming_patterns.nlpl  21_advanced_type_features.nlpl  22_pointer_operations.nlpl  23_struct_and_union.nlpl  25_ffi_c_interop.nlpl  25_inline_assembly.nlpl  25_inline_assembly.nxl  26_calculator_gui.nxl  26_ffi_struct_marshalling.nlpl  27_delivery_dashboard_gui.nxl  27_testing.nlpl  ORGANIZATION.md  README.md  REORGANIZE.sh  bitwise_operations.nlpl  bitwise_operations.nxl  build_test_hello.nlpl  build_test_hello.nxl  crypto_file_encryption.nlpl  crypto_file_encryption.nxl  debug_test.nlpl  (+20 more)
src/nexuslang/stdlib_native/: CMakeLists.txt  Makefile  __init__.py
src/nexuslang/stdlib_native/include/: nlpl_runtime.h  nxl_runtime.h
src/nexuslang/stdlib_native/src/: nlpl_collections.c  nlpl_math.c  nlpl_runtime.c  nxl_io.c  nxl_runtime.c  nxl_string.c
src/nexuslang/stdlib_native/tests/: smoke_test.c
(+3259 files in other folders)
